@@ -15,4 +15,3 @@ forth line.
 
 seventh line.
 End of zero file test.
-[UUdata testfile.txt]
