@@ -1,0 +1,28 @@
+From: donut@charon
+Newsgroups: test
+Subject: whee - test2.txt (1/1)
+User-Agent: Newspost/2.0 (http://newspost.unixcab.org/)
+Date: Sun, 05 Jan 2002 23:10:07 GMT
+Message-ID: <1.1041808207.48@dumbnntpd>
+
+begin 644 test2.txt
+M>45N8R`M(%1E<W1F:6QE("@Q*0T*05-#24DZ(#(U-2XN,`T*__[]_/OZ^?CW
+M]O7T\_+Q\._N[>SKZNGHY^;EY./BX>#?WMW<V]K9V-?6U=33TM'0S\[-S,O*
+MR<C'QL7$P\+!P+^^O;R[NKFXM[:UM+.RL;"OKJVLJZJIJ*>FI:2CHJ&@GYZ=
+MG)N:F9B7EI64DY*1D(^.C8R+BHF(AX:%A(."@8!_?GU\>WIY>'=V=71S<G%P
+M;VYM;&MJ:6AG9F5D8V)A8%]>75Q;6EE85U955%-245!/3DU,2TI)2$=&141#
+M0D%`/SX]/#LZ.3@W-C4T,S(Q,"\N+2PK*BDH)R8E)",B(2`?'AT<&QH9&!<6
+M%103$A$0#PX-#`L*"0@'!@4$`P(!``T*05-#24DZ(#`N+C(U-0T*``$"`P0%
+M!@<("0H+#`T.#Q`1$A,4%187&!D:&QP='A\@(2(C)"4F)R@I*BLL+2XO,#$R
+M,S0U-C<X.3H[/#T^/T!!0D-$149'2$E*2TQ-3D]045)35%565UA96EM<75Y?
+M8&%B8V1E9F=H:6IK;&UN;W!Q<G-T=79W>'EZ>WQ]?G^`@8*#A(6&AXB)BHN,
+MC8Z/D)&2DY25EI>8F9J;G)V>GZ"AHJ.DI::GJ*FJJZRMKJ^PL;*SM+6VM[BY
+MNKN\O;Z_P,'"P\3%QL?(R<K+S,W.S]#1TM/4U=;7V-G:V]S=WM_@X>+CY.7F
+MY^CIZNOL[>[O\/'R\_3U]O?X^?K[_/W^_PT*4V]M92!R86YD;VT@<W1U9F8Z
+M"DQ!3$%,06QA;&%L80I7:&5E(5=(964A5TA%92%72$5%(2$*?B%`(R0E7B8J
+M*"E[?0IP>69G8W)L"F%O975I9&AT;G,*<6IK>&)M=W9Z"B\J+3<X.30U-C$R
+M,S`N"GEO=2!C86X@979E;B!S964@=&AE('-O=6P@97-C87!I;F<*16YD(&]F
++(%1E<W1F:6QE#0H`
+`
+end
+
